add alt tags and remove unused duplicate pages

--- a/issues/conservation/document1.html
+++ b/issues/conservation/document1.html
@@ -52,7 +52,7 @@
       <p>Environmental Involvement<br>
       n.d.</p>
       <p> A list of major environmental issues Senator Lowell Weicker was involved with from 1972 to 1988. </p>
-      		<img src="../../images/issues/conservation/1-1-full.jpg" class="full-width-img" alt=""></a>
+      		<img src="../../images/issues/conservation/1-1-full.jpg" class="full-width-img" alt="typewritten list"></a>
 
   </div><!-- /.container -->
 <footer>
