--- a/issues/conservation/document2.html
+++ b/issues/conservation/document2.html
@@ -52,7 +52,7 @@
       <p>Weicker Bets on the Oceans<br>
       <i>New York Times</i>, February 13, 1977</p>
       <p> A newspaper piece on Senator Weicker’s involvement with ocean research and advocacy.</p>
-      		<img src="../../images/issues/conservation/2-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/conservation/2-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
