--- a/issues/conservation/document4.html
+++ b/issues/conservation/document4.html
@@ -50,9 +50,9 @@
     	<a href="../conservation-documents.html" class="back-link">Documents</a>
         <h3>Weicker’s Thoughts on Castro</h3>
       <p>Weicker Says Castro Seems to Want Better U.S. Ties<br>
-      October 18, 2014 </p>
+      October 19, 1980 </p>
       <p> In a special article in the New York Times, Senator Weicker discussed his trip to Cuba and his time with Fidel Castro. During the trip he discussed fisheries and marine science, and spent 11 hours on Castro’s boat.</p>
-      		<img src="../../images/issues/conservation/4-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/conservation/4-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
