--- a/issues/conservation/document5.html
+++ b/issues/conservation/document5.html
@@ -52,7 +52,7 @@
       <p>Weicker: 60 Feet Under<br>
       n.d.</p>
       <p> A newspaper article detailed Senator Weicker’s visit to the Hydro-lab, a marine science lab underwater off the coast of the Bahamas.</p>
-      		<img src="../../images/issues/conservation/5-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/conservation/5-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
