--- a/issues/conservation/document6.html
+++ b/issues/conservation/document6.html
@@ -54,8 +54,8 @@
       Guest editorial by Lowell P. Weicker, Jr., in Vol. 6, No. 6 May 1998 issue.</p>
       <p>Senator Weicker's article, &quot;A Voyage of Discovery,&quot; discussed the need for ocean research and protection. Weicker addressed issues such as mass dolphin deaths, coral bleaching, pollution, environmental deterioration, and the need to develop technology to &quot;explore and better understand the ocean depths and a government agency.&quot; With budget cuts looming, Weicker warned against cutting funding to NOAA and the Hydro-lab off St. Croix, and emphasized &quot;sustainable development of our marine resources.&quot; Finally, Weicker highlighted promising legislative initiatives like the National Marine Policy Commission and the creation of the American Oceans Campaign.</p>
       <p>SOURCE: Snider Box 2.</p>
-      		<img src="../../images/issues/conservation/6-1-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/6-2-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/conservation/6-1-full.jpg" class="full-width-img" alt="newsletter editorial">
+      		<img src="../../images/issues/conservation/6-2-full.jpg" class="full-width-img" alt="newsletter editorial">
   </div><!-- /.container -->
 <footer>
 <div class="container secondary-nav"><a href="/about.html">About the Collection</a> &nbsp; | &nbsp; <a href="/findingaid.html">Weicker Collection Finding Aids</a> &nbsp; | &nbsp; <a href="../../credits.html">Credits</a> &nbsp; | &nbsp; <a href="/interviewindex.html">Interview Index</a></div>
