--- a/issues/disabilities-documents.html
+++ b/issues/disabilities-documents.html
@@ -51,29 +51,29 @@
         <h3>Documents Related to Disabilities</h3>
       <div class="row doc-directory-container">
       <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document1.html"><img src="../images/issues/disabilities/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document1.html"><img src="../images/issues/disabilities/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="disabilities/document1.html">Mental Disabilities Article 2</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document2.html"><img src="../images/issues/disabilities/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document2.html"><img src="../images/issues/disabilities/2-1-thumb.jpg" class="full-width-img" alt="Senatorial press release"></a></div>
             <p class="full-width-img"><a href="disabilities/document2.html">Mental Disabilities Press Release</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document3.html"><img src="../images/issues/disabilities/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document3.html"><img src="../images/issues/disabilities/3-1-thumb.jpg" class="full-width-img" alt="typed outline"></a></div>
             <p class="full-width-img"><a href="disabilities/document3.html">MD Staff Report Plan</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document4.html"><img src="../images/issues/disabilities/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document4.html"><img src="../images/issues/disabilities/4-1-thumb.jpg" class="full-width-img" alt="news transcript"></a></div>
             <p class="full-width-img"><a href="disabilities/document4.html">Mental Disabilities Article 1</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
           <!-- Add the extra clearfix for only the required viewport -->
 		  <div class="clearfix visible-lg-block"></div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document5.html"><img src="../images/issues/disabilities/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document5.html"><img src="../images/issues/disabilities/5-1-thumb.jpg" class="full-width-img" alt="typed list"></a></div>
             <p class="full-width-img"><a href="disabilities/document5.html">MD Conclusions</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="disabilities/document6.html"><img src="../images/issues/disabilities/6-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document6.html"><img src="../images/issues/disabilities/6-1-thumb.jpg" class="full-width-img" alt="checklist"></a></div>
             <p class="full-width-img"><a href="disabilities/document6.html">MD Witness List</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         
