--- a/issues/disabilities/document4.html
+++ b/issues/disabilities/document4.html
@@ -53,7 +53,7 @@
       April 1, 1985</p>
       <p> This article describes public witness testimony from two Texas families and mental patient advocates. The article discusses Senator Weicker’s Subcommittee results from their six-month investigation of 31 institutions in 12 states. Weicker expressed his dissatisfaction, calling on the Justice Department for failing to enforce the Civil Rights of Institutionalized Persons Act of 1980 (CRIPA).</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 540, Folder 3, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/disabilities/4-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/disabilities/4-1-full.jpg" class="full-width-img" alt="news transcript">
 
   </div><!-- /.container -->
 <footer>
