--- a/issues/disabilities/document6.html
+++ b/issues/disabilities/document6.html
@@ -53,7 +53,7 @@
       February 26, 1985</p>
       <p> Weicker's staff witness list for Senate hearings addressing mental institution investigations reveals the plan for the witness testimony, those in attendance, states covered in the testimonies, list of employers, and list of self-advocates.</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 540, Folder 3, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/disabilities/6-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/disabilities/6-1-full.jpg" class="full-width-img" alt="checklist">
 
   </div><!-- /.container -->
 <footer>
