--- a/issues/politics/document1.html
+++ b/issues/politics/document1.html
@@ -53,7 +53,7 @@
       n.d.</p>
       <p> Newspaper article articulating Senator Lowell Weicker’s criticism of the Republican Party.</p>
 	  <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1552, Folder 11, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/politics/1-1-full.jpg" class="full-width-img" alt=""></a>
+      		<img src="../../images/issues/politics/1-1-full.jpg" class="full-width-img" alt="news article"></a>
 
   </div><!-- /.container -->
 <footer>
