--- a/issues/politics/document2.html
+++ b/issues/politics/document2.html
@@ -52,7 +52,7 @@
       <p>Opening Statement: Senator Lowell Weicker, Jr., Republican Platform Hearing<br>
       June 7, 1988</p>
       <p> Press Release detailing Senator Lowell Weicker’s opening statement to the Republican Platform Hearing. His aim with the opening statement is to gear the 1988 Republican Platform to “reflect the real problems of real people.” He criticizes the Republican Party for faltering in its leadership and discusses religious freedom, homelessness, the AIDS epidemic, First Amendment rights, disabilities, conservationists, and the free market. </p>
-      		<img src="../../images/issues/politics/2-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/politics/2-1-full.jpg" class="full-width-img" alt="Senatorial press release">
 
   </div><!-- /.container -->
 <footer>
