--- a/issues/transportation-documents.html
+++ b/issues/transportation-documents.html
@@ -51,15 +51,15 @@
         <h3>Documents Related to Transportation</h3>
       <div class="row doc-directory-container">
   <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="transportation/document1.html"><img src="../images/issues/transportation/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document1.html"><img src="../images/issues/transportation/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="transportation/document1.html">New York Times Transit Fund Article</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="transportation/document2.html">Bill to Aid Transit</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="transportation/document3.html"><img src="../images/issues/transportation/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document3.html"><img src="../images/issues/transportation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
             <p class="full-width-img"><a href="transportation/document3.html">S. 771 Bill</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
