--- a/issues/transportation.html
+++ b/issues/transportation.html
@@ -65,15 +65,15 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="transportation/document1.html"><img src="../images/issues/transportation/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document1.html"><img src="../images/issues/transportation/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="transportation/document1.html">New York Times Transit Fund Article</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="transportation/document2.html">Bill to Aid Transit</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="transportation/document3.html"><img src="../images/issues/transportation/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document3.html"><img src="../images/issues/transportation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
             <p class="full-width-img"><a href="transportation/document3.html">S. 771 Bill</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
