--- a/issues/transportation/document1.html
+++ b/issues/transportation/document1.html
@@ -52,7 +52,7 @@
       <p>Senators Weicker and Kennedy Offer Transit Fund Plan<br>
       September 2, 1972</p>
       <p> In a New York Times article, Senator Ted Kennedy and Senator Lowell Weicker introduced legislation designed to permit the use of $2.4 billion from the Federal Highway Trust Fund for mass transit. The bill was intended to promote more interstate infrastructure and mass transit systems.</p>
-      		<img src="../../images/issues/transportation/1-1-full.jpg" class="full-width-img" alt=""></a>
+      		<img src="../../images/issues/transportation/1-1-full.jpg" class="full-width-img" alt="news article"></a>
 
   </div><!-- /.container -->
 <footer>
