--- a/issues/transportation/document2.html
+++ b/issues/transportation/document2.html
@@ -52,7 +52,7 @@
       <p>Bill to Aid Transit<br>
       n.d.</p>
       <p> A second newspaper excerpt on a proposal from Senator Weicker and Kennedy to allow states and cities to use the Highway Trust Fund to build mass transit systems.</p>
-      		<img src="../../images/issues/transportation/2-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/transportation/2-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
