--- a/interviews/byrnes.html
+++ b/interviews/byrnes.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/headshot-byrnes.jpg" class="full-width-img interview-portrait">
+		<img src="../images/headshot-byrnes.jpg" class="full-width-img interview-portrait" alt="Photo of Maureen Byrnes">
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/2n49t188h/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Maureen Byrnes<br>
         <strong>Interview Date:</strong> April 13, 2010<br>
