--- a/interviews/shure.html
+++ b/interviews/shure.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/headshot-shure.jpg" class="full-width-img interview-portrait">
+		<img src="../images/headshot-shure.jpg" class="full-width-img interview-portrait" alt="Photo of William Shure">
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/j098zb18x/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> H. William Shure<br>
           <strong>Interview Date:</strong> April 12, 2010<br>
