--- a/interviews/weicker-cweicker.html
+++ b/interviews/weicker-cweicker.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<!--<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">-->
+		<!--<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait" alt="Blank photo placeholder">-->
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/w6634372w/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewees:</strong> Lowell P. Weicker, Jr., and Claudia T. Weicker<br>
         <strong>Interview Date:</strong> January 11, 2011<br>
