--- a/interviews/weicker3.html
+++ b/interviews/weicker3.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/headshot-weicker.jpg" class="full-width-img interview-portrait">
+		<img src="../images/headshot-weicker.jpg" class="full-width-img interview-portrait" alt="Photo of Lowell Weicker">
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/qj72p7206/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Lowell P. Weicker, Jr.<br>
         <strong>Interview Date:</strong> May 10, 2010<br>
