--- a/issues/conservation-documents.html
+++ b/issues/conservation-documents.html
@@ -51,29 +51,29 @@
         <h3>Documents Related to Environmental Conservation and Oceanic Preservation</h3>
       <div class="row doc-directory-container">
       <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
             <p class="full-width-img"><a href="conservation/document1.html">Overview of Environmental Involvement</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document2.html">Weicker Bets on the Oceans</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document3.html"><img src="../images/issues/conservation/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document3.html"><img src="../images/issues/conservation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
             <p class="full-width-img"><a href="conservation/document3.html">S. 821: Establishment of NOAA as Independent Agency</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document4.html"><img src="../images/issues/conservation/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document4.html"><img src="../images/issues/conservation/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document4.html">Weicker’s Thoughts on Castro</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
           <!-- Add the extra clearfix for only the required viewport -->
 		  <div class="clearfix visible-lg-block"></div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document5.html"><img src="../images/issues/conservation/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document5.html"><img src="../images/issues/conservation/5-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document5.html">Sen. Weicker visits the Hydro-lab</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document6.html"><img src="../images/issues/conservation/6-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document6.html"><img src="../images/issues/conservation/6-1-thumb.jpg" class="full-width-img" alt="newsletter page"></a></div>
             <p class="full-width-img"><a href="conservation/document6.html">Guest Editorial on Conservation</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         
