--- a/issues/conservation.html
+++ b/issues/conservation.html
@@ -65,23 +65,23 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
             <p class="full-width-img"><a href="conservation/document1.html">Overview of Environmental Involvement</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document2.html">Weicker Bets on the Oceans</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="conservation/document3.html"><img src="../images/issues/conservation/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document3.html"><img src="../images/issues/conservation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
             <p class="full-width-img"><a href="conservation/document3.html">S. 821: Establishment of NOAA as Independent Agency</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="conservation/document4.html"><img src="../images/issues/conservation/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document4.html"><img src="../images/issues/conservation/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document4.html">Weicker’s Thoughts on Castro</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="conservation/document5.html"><img src="../images/issues/conservation/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="conservation/document5.html"><img src="../images/issues/conservation/5-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="conservation/document5.html">Sen. Weicker visits the Hydro-lab</a></p>
             </div>
           <div class="clearfix"></div>
