--- a/issues/conservation/document3.html
+++ b/issues/conservation/document3.html
@@ -53,25 +53,25 @@
       March 24, 1987</p>
       <p> Throughout his career, Senator Weicker fought to establish NOAA as an independent federal agency. His bill, S. 821 The National Oceanic and Atmospheric Administration Independent Establishment Act of 1987, aimed to grant NOAA its independence. The bill, had it succeeded, would have removed NOAA from under the foot of the Commerce Committee. S. 821 would have established NOAA as a &quot;lead civilian Federal Agency,&quot; recognized the impact oceanic and atmospheric research has on our understanding of the world, and also recognized that &quot;marine resources are major contributors to the Nation’s economy and well-being.&quot; Finally, the bill would have given “the agency the recognition and standing it deserves, and the autonomy it needs to carry out its vital” services. The bill goes on to define the terms of NOAA, its officers, rules and regulations, personnel and services, contracts, acquisition and use of oceanic research facilities, authorization and appropriation, and its effective date. While the bill did not succeed, it remains an artifact of Weicker's dedication and passion for the oceans.</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 644, Folder 44, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/conservation/3-1-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-2-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-3-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-4-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-5-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-6-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-7-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-8-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-9-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-10-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-11-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-12-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-13-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-14-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-15-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-16-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-17-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-18-full.jpg" class="full-width-img" alt="">
-      		<img src="../../images/issues/conservation/3-19-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/conservation/3-1-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-2-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-3-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-4-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-5-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-6-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-7-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-8-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-9-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-10-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-11-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-12-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-13-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-14-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-15-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-16-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-17-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-18-full.jpg" class="full-width-img" alt="Congressional bill">
+      		<img src="../../images/issues/conservation/3-19-full.jpg" class="full-width-img" alt="Congressional bill">
 
   </div><!-- /.container -->
 <footer>
