--- a/issues/disabilities.html
+++ b/issues/disabilities.html
@@ -65,23 +65,23 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="disabilities/document1.html"><img src="../images/issues/disabilities/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document1.html"><img src="../images/issues/disabilities/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="disabilities/document1.html">Mental Disabilities Article 2</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="disabilities/document2.html"><img src="../images/issues/disabilities/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document2.html"><img src="../images/issues/disabilities/2-1-thumb.jpg" class="full-width-img" alt="Senatorial press release"></a></div>
             <p class="full-width-img"><a href="disabilities/document2.html">Mental Disabilities Press Release</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="disabilities/document3.html"><img src="../images/issues/disabilities/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document3.html"><img src="../images/issues/disabilities/3-1-thumb.jpg" class="full-width-img" alt="typed outline"></a></div>
             <p class="full-width-img"><a href="disabilities/document3.html">MD Staff Report Plan</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="disabilities/document4.html"><img src="../images/issues/disabilities/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document4.html"><img src="../images/issues/disabilities/4-1-thumb.jpg" class="full-width-img" alt="news transcript"></a></div>
             <p class="full-width-img"><a href="disabilities/document4.html">Mental Disabilities Article 1</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="disabilities/document5.html"><img src="../images/issues/disabilities/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="disabilities/document5.html"><img src="../images/issues/disabilities/5-1-thumb.jpg" class="full-width-img" alt="typed list"></a></div>
             <p class="full-width-img"><a href="disabilities/document5.html">MD Conclusions</a></p>
             </div>
           <div class="clearfix"></div>
