--- a/issues/disabilities/document3.html
+++ b/issues/disabilities/document3.html
@@ -53,7 +53,7 @@
       n.d.</p>
       <p> This presentation outline reveals how the Weicker staff report would be compiled and presented. Senator Weicker's staff led investigations into abuse allegations at mental institutions across the nation in the mid-1980s. After months, the staff put together a report which they presented to the Senator and later the Senate. The outline details who exactly worked on the project, was involved in the investigations, and led the disabilities initiatives. The staff report would go on to culminate in the passage of S. 415, S. 974, and S. 2345 (The Americans with Disabilities Act).</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 540, Folder 3, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/disabilities/3-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/disabilities/3-1-full.jpg" class="full-width-img" alt="typed outline">
 
   </div><!-- /.container -->
 <footer>
