--- a/issues/politics-documents.html
+++ b/issues/politics-documents.html
@@ -51,11 +51,11 @@
         <h3>Documents Related to Political Career: The Original Maverick</h3>
       <div class="row doc-directory-container">
   <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="politics/document1.html"><img src="../images/issues/politics/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document1.html"><img src="../images/issues/politics/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="politics/document1.html">Judgment on Haig</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="politics/document2.html"><img src="../images/issues/politics/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document2.html"><img src="../images/issues/politics/2-1-thumb.jpg" class="full-width-img" alt="Senatorial press release"></a></div>
             <p class="full-width-img"><a href="politics/document2.html">Republican Platform Hearing</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
@@ -63,7 +63,7 @@
             <p class="full-width-img"><a href="politics/document3.html">Lowell Weicker – Third Party of One</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="politics/document4.html"><img src="../images/issues/politics/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document4.html"><img src="../images/issues/politics/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="politics/document4.html">Lowell Weicker Joins in Race for Presidency</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
           <!-- Add the extra clearfix for only the required viewport -->
