--- a/issues/politics.html
+++ b/issues/politics.html
@@ -65,11 +65,11 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="politics/document1.html"><img src="../images/issues/politics/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document1.html"><img src="../images/issues/politics/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="politics/document1.html">Judgment on Haig</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="politics/document2.html"><img src="../images/issues/politics/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document2.html"><img src="../images/issues/politics/2-1-thumb.jpg" class="full-width-img" alt="Senatorial press release"></a></div>
             <p class="full-width-img"><a href="politics/document2.html">Republican Platform Hearing</a></p>
             </div>
           	<div class="related-docs hidden-xs">
@@ -77,7 +77,7 @@
             <p class="full-width-img"><a href="politics/document3.html">Lowell Weicker – Third Party of One</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="politics/document4.html"><img src="../images/issues/politics/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="politics/document4.html"><img src="../images/issues/politics/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="politics/document4.html">Lowell Weicker Joins in Race for Presidency</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
