--- a/issues/watergate.html
+++ b/issues/watergate.html
@@ -65,23 +65,23 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="watergate/document1.html"><img src="../images/issues/watergate/1-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="watergate/document1.html"><img src="../images/issues/watergate/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="watergate/document1.html">Weicker and the GOP Article</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="watergate/document2.html"><img src="../images/issues/watergate/2-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="watergate/document2.html"><img src="../images/issues/watergate/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="watergate/document2.html">Sen. Weicker Calls for Haldeman Resignation</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="watergate/document3.html"><img src="../images/issues/watergate/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="watergate/document3.html"><img src="../images/issues/watergate/3-1-thumb.jpg" class="full-width-img" alt="handwritten list"></a></div>
             <p class="full-width-img"><a href="watergate/document3.html">Notes between Shure and Weicker</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="watergate/document4.html"><img src="../images/issues/watergate/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="watergate/document4.html"><img src="../images/issues/watergate/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="watergate/document4.html">Sen. Weicker’s Recommendations</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="watergate/document5.html"><img src="../images/issues/watergate/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="watergate/document5.html"><img src="../images/issues/watergate/5-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="watergate/document5.html">Starring in Watergate</a></p>
             </div>
           <div class="clearfix"></div>
