--- a/issues/conservation/document4.html
+++ b/issues/conservation/document4.html
@@ -52,6 +52,7 @@
       <p>Weicker Says Castro Seems to Want Better U.S. Ties<br>
       October 19, 1980 </p>
       <p> In a special article in the New York Times, Senator Weicker discussed his trip to Cuba and his time with Fidel Castro. During the trip he discussed fisheries and marine science, and spent 11 hours on Castro’s boat.</p>
+	  <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 531, Folder 8, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/conservation/4-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
