add alt tags; remove standalone page for Watergate document 7, which is actually the second page of Watergate document 12

--- a/issues/watergate/document13.html
+++ b/issues/watergate/document13.html
@@ -69,7 +69,7 @@
         Ehrl. = John Ehrlichman<br>
       Dailey = Peter Dailey</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1655, Folder 1, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/watergate/13-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/watergate/13-1-full.jpg" class="full-width-img" alt="handwritten calendar of one month">
 
   </div><!-- /.container -->
 <footer>
