--- a/people/byrnes.html
+++ b/people/byrnes.html
@@ -60,9 +60,9 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-byrnes.jpg" class="full-width-img">
+        <img src="../images/headshot-byrnes.jpg" class="full-width-img" alt="photograph of Maureen Byrnes">
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/byrnes.html"><img src="../images/interview.jpg" class="interview-image" > Maureen Byrnes</a><br>
+          <p><a href="../interviews/byrnes.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Maureen Byrnes</a><br>
             April 13,2010<br>Duration 1:29:28
           </p>
           <h4>Key Legislation</h4>
