--- a/people/dotchin.html
+++ b/people/dotchin.html
@@ -59,9 +59,9 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-dotchin.jpg" class="full-width-img">
+        <img src="../images/headshot-dotchin.jpg" class="full-width-img" alt="photograph of Robert Dotchin">
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/dotchin.html"><img src="../images/interview.jpg" class="interview-image" > Dotchin Interview</a><br>
+          <p><a href="../interviews/dotchin.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Dotchin Interview</a><br>
           March 17, 2011<br>Duration 1:19:20</p>
           <h4>Key Legislation</h4>
          <ul>
