--- a/people/weicker.html
+++ b/people/weicker.html
@@ -65,25 +65,25 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-weicker.jpg" class="full-width-img">
+        <img src="../images/headshot-weicker.jpg" class="full-width-img" alt="photograph of Lowell Weicker">
           <h4 id="sidebar-first">Interviews</h4>
-          <p class="sidebar-interview"><a href="../interviews/weicker1.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview One</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker1.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Weicker Interview One</a><br>
             April 20, 2010<br>
 			Duration 1:29:28
           </p>
-          <p class="sidebar-interview"><a href="../interviews/weicker2.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview Two</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker2.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Weicker Interview Two</a><br>
 April 22, 2010<br>
 Duration 1:04:57 </p>
-          <p class="sidebar-interview"><a href="../interviews/weicker3.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview Three</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker3.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Weicker Interview Three</a><br>
 May 10, 2010<br>
 Duration 1:37:27 </p>
-          <p class="sidebar-interview"><a href="../interviews/weicker4.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview Four</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker4.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Weicker Interview Four</a><br>
 May 14, 2010<br>
 Duration 1:23:12 </p>
-          <p class="sidebar-interview"><a href="../interviews/weicker5.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview Five</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker5.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Weicker Interview Five</a><br>
 January 12, 2011<br>
 Duration 1:04:51 </p>
-          <p class="sidebar-interview"><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker Interview</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Lowell and Claudia Weicker Interview</a><br>
   January 11, 2011<br>
 Duration 1:40:34</p>
           <h4>Sources</h4>
