--- a/people/west.html
+++ b/people/west.html
@@ -60,7 +60,7 @@
         <div class="col-md-3 lvl2-sidebar">
         <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/doyle-west.html"><img src="../images/interview.jpg" class="interview-image" > Doyle and West Interview</a><br>
+          <p><a href="../interviews/doyle-west.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Doyle and West Interview</a><br>
             April 13,2010<br>Duration 1:29:28
         </p>
         </div> 
