--- a/issues/watergate/document1.html
+++ b/issues/watergate/document1.html
@@ -53,7 +53,7 @@
       July 10, 1974</p>
       <p> In a Connecticut newspaper clipping, Junior U.S. Senator Lowell Weicker gave a scathing attack on the Nixon Administration. He charged that the administration broke the law and violated the Constitution in its implementation and cover up of the Watergate break-ins. While Sen. Weicker’s criticisms were harsh, the reporter noted that having a Republican on the forefront of the Watergate investigation is doing his party (Republican) a favor.</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 2, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/watergate/1-1-full.jpg" class="full-width-img" alt=""></a>
+      		<img src="../../images/issues/watergate/1-1-full.jpg" class="full-width-img" alt="news article"></a>
 
   </div><!-- /.container -->
 <footer>
