--- a/issues/watergate/document10.html
+++ b/issues/watergate/document10.html
@@ -71,7 +71,7 @@
         Dailey = Peter Dailey <br>
       Timmons = William Timmons</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1655, Folder 1, Small Special Collections Library, University of Virginia</p>
-      		 <img src="../../images/issues/watergate/10-1-full.jpg" class="full-width-img" alt="">
+      		 <img src="../../images/issues/watergate/10-1-full.jpg" class="full-width-img" alt="handwritten calendar of two weeks">
 
   </div><!-- /.container -->
 <footer>
