--- a/issues/watergate/document2.html
+++ b/issues/watergate/document2.html
@@ -53,7 +53,7 @@
       April 3, 1973</p>
       <p> In one of the most controversial and politically risky moves during the Watergate scandal, Senator Lowell Weicker publicly called for the resignation of H.R. Haldeman. </p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1682, Folder 4, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/watergate/2-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/watergate/2-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
