--- a/issues/watergate/document3.html
+++ b/issues/watergate/document3.html
@@ -53,7 +53,7 @@
       March 30, 1973</p>
       <p> Handwritten notes between Senator Weicker and committee counsel H. William Shure making notes of those in attendance at a banquet. Note reads: &quot;Who was at banquet? Liddy, McCad, Darber, Martney, Gonzalez, Steagan.&quot;</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1649, Folder 10, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/watergate/3-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/watergate/3-1-full.jpg" class="full-width-img" alt="handwritten list">
 
   </div><!-- /.container -->
 <footer>
