--- a/issues/watergate/document5.html
+++ b/issues/watergate/document5.html
@@ -69,7 +69,7 @@
         <li>John J. Sirica</li>
       </ul>
 <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1682, Folder 4, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/watergate/5-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/watergate/5-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
