--- a/people/balducci.html
+++ b/people/balducci.html
@@ -62,7 +62,7 @@
         <div class="col-md-3 lvl2-sidebar">
         <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/balducci.html"><img src="../images/interview.jpg" class="interview-image" > Richard J. Balducci</a><br>
+          <p><a href="../interviews/balducci.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Richard J. Balducci</a><br>
             March 17, 2011<br>
             Duration 0:56:56
 </p>
