--- a/people/cweicker.html
+++ b/people/cweicker.html
@@ -70,9 +70,9 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-cweicker.jpg" class="full-width-img">
+        <img src="../images/headshot-cweicker.jpg" class="full-width-img" alt="photograph of Claudia Weicker">
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker</a><br>
+          <p><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Lowell and Claudia Weicker</a><br>
             January 11, 2011<br>
             Duration 1:40:34</p>
         </div> 
