--- a/people/elliott.html
+++ b/people/elliott.html
@@ -72,7 +72,7 @@
         <div class="col-md-3 lvl2-sidebar">
         <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/elliott.html"><img src="../images/interview.jpg" class="interview-image" > Elliott Interview</a><br>
+          <p><a href="../interviews/elliott.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Elliott Interview</a><br>
             April 13,2010<br>Duration 1:29:28
 </p>
           <h4>Sources</h4>
