--- a/people/shure.html
+++ b/people/shure.html
@@ -58,9 +58,9 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-shure.jpg" class="full-width-img">
+        <img src="../images/headshot-shure.jpg" class="full-width-img" alt="photograph of William Shure">
           <h4 id="sidebar-first">Interview</h4>
-          <p class="sidebar-interview"><a href="../interviews/shure.html"><img src="../images/interview.jpg" class="interview-image" > Shure Interview</a><br>
+          <p class="sidebar-interview"><a href="../interviews/shure.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Shure Interview</a><br>
             April 13, 2010<br>Duration 1:29:28
 </p>
           <h4>Sources</h4>
