--- a/people/twardy.html
+++ b/people/twardy.html
@@ -58,9 +58,9 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-twardy.jpg" class="full-width-img">
+        <img src="../images/headshot-twardy.jpg" class="full-width-img" alt="photograph of Stanley Twardy">
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/twardy.html"><img src="../images/interview.jpg" class="interview-image" > Stanley A. Twardy, Jr.</a><br>
+          <p><a href="../interviews/twardy.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Stanley A. Twardy, Jr.</a><br>
             <span class="interview-subhead">April 6, 2010</span><br>
             Duration 1:35:28
           </p>
