--- a/people/wicklund.html
+++ b/people/wicklund.html
@@ -63,7 +63,7 @@
         <div class="col-md-3 lvl2-sidebar">
         <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/wicklund.html"><img src="../images/interview.jpg" class="interview-image" > Wicklund Interview</a><br>
+          <p><a href="../interviews/wicklund.html"><img src="../images/interview.jpg" class="interview-image" alt="interview"> Wicklund Interview</a><br>
             April 13,2010<br>Duration 1:29:28
           </p>
           <h4>Key Legislation</h4>
