add alt tags; remove redundant, unlinked copy of the disabilities issue page

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
     	  <h4><strong>About Access</strong></h4>
             <p> For research assistance, please contact the <a href="http://small.library.virginia.edu/">Special Collections Library</a>. </p>
 <p> You may submit an online <a href="https://small.lib.virginia.edu/reference-request/">Reference Request Form</a> through the Special Collections Library.</p>
-            <p>The Albert and Shirley Small Special Collections Library is located at UVa's Charlottesville campus. <a href="https://www.google.com/maps/place/Special+Collections+Library/@38.036127,-78.505798,17z/data=!3m1!4b1!4m2!3m1!1s0x89b386458e1c6161:0x1ff18c5351c984f8"">Map</a></p>
+            <p>The Albert and Shirley Small Special Collections Library is located at UVa's Charlottesville campus. <a href="https://www.google.com/maps/place/Special+Collections+Library/@38.036127,-78.505798,17z/data=!3m1!4b1!4m2!3m1!1s0x89b386458e1c6161:0x1ff18c5351c984f8">Map</a></p>
             <h4>Reproduction Rights</h4>
             <p> Use of some databases may also be restricted by license agreement with the<br>
               data provider. Specific information is posted with some databases, but most are limited to use by faculty, students, and staff of the University or of the colleges and universities participating in Virginia's <a href="http://www.vivalib.org">VIVA</a> consortium.      </p>
