--- a/findingaid.html
+++ b/findingaid.html
@@ -54,13 +54,13 @@
 	  <div class="col-sm-9">
             <h4>Downloadable Finding Aid</h4>
             <p>The library has prepared a Finding Aid document that contains detailed information about the collection. Download the Finding Aid as a Microsoft Word Document or a PDF.</p>
-            <p><img src="images/word.jpg" class="interview-image"> <a href="findingaids/Weicker_Papers_Finding_Aid.doc"><strong>Weicker Papers Collection Finding Aid</strong></a> (1816 pages, MSWord, 4.1MB)<br>
+            <p><img src="images/word.jpg" class="interview-image" alt="Microsoft Word"> <a href="findingaids/Weicker_Papers_Finding_Aid.doc"><strong>Weicker Papers Collection Finding Aid</strong></a> (1816 pages, MSWord, 4.1MB)<br>
             </p>
-        <p><img src="images/pdf.jpg"  class="interview-image"> <a href="findingaids/Weicker_Papers_Finding_Aid.pdf"><strong>Weicker Papers Collection Finding Aid</strong></a> (1816 pages, PDF, 8.8MB)</p>
+        <p><img src="images/pdf.jpg"  class="interview-image" alt="Adobe Acrobat"> <a href="findingaids/Weicker_Papers_Finding_Aid.pdf"><strong>Weicker Papers Collection Finding Aid</strong></a> (1816 pages, PDF, 8.8MB)</p>
         <h4><br>
 Online Finding Aid</h4>
         <p><a href="http://www.vivalib.org/">VIVA</a>, the Virtual Library of Virginia, is a consortium of the nonprofit academic libraries within the Commonwealth of Virginia. They host a detailed online finding aid to the Lowell P. Weicker, Jr., Papers Collection.</p>
-        <p><img src="images/web.jpg"  class="interview-image"> <a href="http://ead.lib.virginia.edu/vivaxtf/view?docId=uva-sc/viu04106.xml;query=weicker papers;brand=default"><strong>Online Weicker Papers Collection Finding Aid</strong></a></p>
+        <p><img src="images/web.jpg"  class="interview-image" alt="globe icon"> <a href="http://ead.lib.virginia.edu/vivaxtf/view?docId=uva-sc/viu04106.xml;query=weicker papers;brand=default"><strong>Online Weicker Papers Collection Finding Aid</strong></a></p>
 	  </div><!-- /.col-sm-9 -->
     	<div class="col-sm-3 lvl2-sidebar">
     	  <h4 id="sidebar-first">Scope and Content of the Collection</h4>
