--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container home-container">
     	<div class="row">
         <div class="col-md-3">
-        	<img src="images/weicker.jpg" class="full-width-img">
+        	<img src="images/weicker.jpg" class="full-width-img" alt="Lowell Weicker">
         </div><!-- /.col-md-3 -->
         <div class="col-md-9">
         <h4>About Lowell P. Weicker, Jr. </h4>
@@ -65,16 +65,16 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-md-3 hidden-xs">
-        	<img src="images/weicker-bus.jpg" class="full-width-img">
+        	<img src="images/weicker-bus.jpg" class="full-width-img" alt="Weicker speaking with two men outside a campaign bus">
         </div><!-- /.col-md-3 -->
         <div class="col-md-3 hidden-xs">
-        	<img src="images/weicker-castro.jpg" class="full-width-img">
+        	<img src="images/weicker-castro.jpg" class="full-width-img" alt="Weicker meeting with Fidel Castro">
         </div><!-- /.col-md-3 -->
         <div class="col-md-3 hidden-sm hidden-xs">
-        	<img src="images/weicker-headshot.jpg" class="full-width-img">
+        	<img src="images/weicker-headshot.jpg" class="full-width-img" alt="Lowell Weicker">
         </div><!-- /.col-md-3 -->
         <div class="col-md-3 hidden-sm hidden-xs">
-        	<img src="images/weicker-handshake.jpg" class="full-width-img">
+        	<img src="images/weicker-handshake.jpg" class="full-width-img" alt="Lowell Weicker shaking hands in a crowd">
         </div><!-- /.col-md-3 -->
         </div><!-- /.row -->
   </div><!-- /.container -->
@@ -82,7 +82,7 @@
   <div class="container home-container">
     	<div class="row">
         <div class="col-md-3">
-        	<img src="images/stacks.jpg" class="full-width-img">
+        	<img src="images/stacks.jpg" class="full-width-img" alt="numerous document boxes on library shelving">
         </div><!-- /.col-md-3 -->
         <div class="col-md-6">
         <h4>The Weicker Papers Collection </h4>
@@ -90,7 +90,7 @@
 	  <p><a href="/about.html">About the Collection</a> | <a href="/issues.html">View Samples by Issue</a></p>
         </div><!-- /.col-md-9 -->
       <div class="col-md-3 hidden-sm hidden-xs">
-        	<img src="images/papers-examples.jpg" class="full-width-img">
+        	<img src="images/papers-examples.jpg" class="full-width-img" alt="miniature thumbnail samples of Weicker's papers">
         </div><!-- /.col-md-3 -->
         </div><!-- /.row -->
     </div><!-- /.container -->
@@ -98,7 +98,7 @@
     <div class="container home-container">
     	<div class="row">
         <div class="col-md-3">
-        	<img src="images/leffler.jpg" class="full-width-img">
+        	<img src="images/leffler.jpg" class="full-width-img" alt="Phyllis Leffler">
         </div><!-- /.col-md-3 -->
         <div class="col-md-9">
         <h4>The Weicker Oral History </h4>
