--- a/people.html
+++ b/people.html
@@ -55,7 +55,7 @@
         	<img src="images/headshot-weicker-thumb.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
-            <h4> <a href="people/weicker.html">Lowell P. Weicker, Jr.</a></h4>
+            <h4> <a href="people/weicker.html" alt="photograph of Lowell Weicker">Lowell P. Weicker, Jr.</a></h4>
             <p>Lowell Weicker was born in 1931 in Paris, France. He graduated from the Lawrenceville School in 1949, Yale University in 1953, and the University of Virginia Law School in 1958. He served in the U.S. Army as a first lieutenant from 1953 to 1955, and in the Army Reserve from 1958 to 1964. </p>
             <p>Weicker began his political career in 1962 when he was elected to the Connecticut General Assembly. He was re-elected twice, and served concurrently as first selectman of Greenwich from 1964 to 1968. In 1968 he was elected to the United States House of Representatives from Connecticut's 4th District. He was elected to the Senate in 1970 and re-elected in 1976 and 1982. <a href="people/weicker.html" class="more-link">More</a></p>
 </div><!-- /.col-sm-9 -->
@@ -66,7 +66,7 @@
         	<img src="images/headshot-cweicker.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
-            <h4> <a href="people/cweicker.html">Claudia T. Weicker</a></h4>
+            <h4> <a href="people/cweicker.html" alt="photograph of Claudia Weicker">Claudia T. Weicker</a></h4>
             <p>Claudia Testa Weicker was born to second-generation Italian parents and was raised in Connecticut. From an early age, politics was a part of her home life. She recalls:</p>
         <p>“One of the earliest memories I have was a political conversation between my mother and father about the 1952 Presidential election…he was for Stevenson and my mother was for Eisenhower. In our home, dinner time was when these conversations took place and they always seemed to have time for our opinions as we were growing up.” </p>
             <p>Engagement in political conversation and exposure to politics fueled her interest in active participation. Her first involvement in politics was during the 1960 Presidential election, in which she volunteered at the Kennedy headquarters. There she worked for the Kennedy campaign by stuffing envelopes, attending phone banks, and passing out campaign literature. Throughout high school and college Claudia continued to work in local elections and offer her services whenever possible. She was, and remains, a Democrat. <a href="people/cweicker.html" class="more-link">More</a></p>
@@ -75,7 +75,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-baker.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-baker.jpg" class="eighty-percent-img" alt="photograph of Geoffrey Baker">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/baker.html"> Geoffrey Baker</a></h4>
@@ -95,7 +95,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-byrnes.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-byrnes.jpg" class="eighty-percent-img" alt="photograph of Maureen Byrnes">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
             <h4> <a href="people/byrnes.html">Maureen Byrnes</a></h4>
@@ -105,7 +105,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-cibes.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-cibes.jpg" class="eighty-percent-img" alt="photograph of William Cibes">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/cibes.html">William J. Cibes, Jr.</a></h4>
@@ -125,7 +125,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-dotchin.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-dotchin.jpg" class="eighty-percent-img" alt="photograph of Robert Dotchin">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4> <a href="people/dotchin.html">Robert J. Dotchin</a></h4>
@@ -175,7 +175,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-shure.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-shure.jpg" class="eighty-percent-img" alt="photograph of William Shure">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
             <h4> <a href="people/shure.html">H. William Shure</a></h4>
@@ -195,7 +195,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-twardy.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-twardy.jpg" class="eighty-percent-img" alt="photograph of Stanley Twardy">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/twardy.html">Stanley A. Twardy, Jr.</a></h4>
