--- a/issues.html
+++ b/issues.html
@@ -54,7 +54,7 @@
 	    <p class="issues-quote">I am sure I will make a lot of mistakes, but I will never make the mistake of turning my back on anyone who is sick. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-aids.jpg" class="full-width-img">
+        	<img src="images/issues-aids.jpg" class="full-width-img" alt="blood vials being handled with gloves">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">AIDS was not an issue of politics or religion for Lowell Weicker. When faced with the public health epidemic, Weicker’s priority was to stop the spread of the virus, treat those who were suffering, and ensure the government protected all Americans. In a time of fiscal and social conservatism, Weicker was one of the few Congressional leaders in the fight against the epidemic. Weicker repeatedly denounced political and religious objections to funding AIDS research because he was a firm believer that science must be free from politics and separate from religious beliefs. AIDS became an issue about human rights, discrimination, and equal protection under the law and another example of how Senator Weicker used his position in Congress to fight for the rights of marginalized individuals.</p>
@@ -66,7 +66,7 @@
 	    <p class="issues-quote">It's up really now to the American people to preserve these gains and they're just as important for the disabled in this country as gains for women or gains for blacks. I'm sure that no woman I know in the United States, no black I know, wants to go back to "the good old days" or "the bad old days." Well, neither do the disabled. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-disabilities.jpg" class="full-width-img">
+        	<img src="images/issues-disabilities.jpg" class="full-width-img" alt="a wheelchair user confronting stairs">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">During the 1980s, Lowell P. Weicker, Jr., and his staff evaluated, updated, and created health policies in the field of mental retardation and civil rights for the handicapped. Senator Weicker is a long-standing and very vocal advocate of affordable public programs for the handicapped and disabled, a commitment fostered by his son, Sonny, who has Down’s syndrome. As President Reagan sought to scale back federal aid for health care, welfare, and education, Senator Weicker and his staff fought back against deep budget cuts, ensuring that handicapped legislation continued to serve the needs of disabled individuals.</p>
@@ -78,7 +78,7 @@
 	    <p class="issues-quote">Forty years later people are questioning the vast sums of money we're spending on space, and never has anybody raised a few million, never mind the billions, for understanding what covers 75% of the world's surface. It's unbelievable. Of all the things I wish I was still in Congress to do, that would be one of them. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-conservation.jpg" class="full-width-img">
+        	<img src="images/issues-conservation.jpg" class="full-width-img" alt="a sea turtle swimming over a coral reef">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">While in Congress, Lowell Weicker merged ocean policy, NOAA, and aquaculture with his responsibilities on the Commerce Committee. He paired a conservation approach with a research approach. Weicker oversaw legislation surrounding oceanic issues such as oil drilling, regulation on ocean dumping, coastal changes, research, estuary programs, the sea grant programs, and fisherman’s contingency funds, and would even travel to Cuba in the name of oceanic scientific research. Weicker’s contributions to ocean policy not only included environmental protection and research but stimulated economic productivity and development.</p>
@@ -90,7 +90,7 @@
 	    <p class="issues-quote">We've deregulated everything in this country except the political system. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-politics.jpg" class="full-width-img">
+        	<img src="images/issues-politics.jpg" class="full-width-img" alt="the Capitol dome and American flag">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">Senator Lowell Weicker established his career as an independent-minded politician during the Watergate scandal. Throughout his senatorial career Weicker did not decide his vote based on party lines, but used instead the Constitution as his guiding principle. His constitution-based philosophy led the Senator to cross party lines, become one of the most outspoken Senators on the floor, and earned him the nickname “Maverick.” Senator Weicker successfully ran as an independent for the Connecticut governorship in 1990. Today he continues to live by the same guiding principles of the U.S. Constitution.</p>
@@ -102,7 +102,7 @@
 	    <p class="issues-quote">The federal budget is in perilous shape not because of the lack of procedural mechanisms to reduce spending but because of the lack of political courage to deal with the problem. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-smallbusiness.jpg" class="full-width-img">
+        	<img src="images/issues-smallbusiness.jpg" class="full-width-img" alt="the door of a small business with an open sign">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">Senator Lowell Weicker’s advocacy on behalf of small, minority-owned, and women-owned businesses emanated out of his belief that small businesses should have a fair share of the pie. In a time of fiscal conservatism and a budget crisis, he was a leader among a group of moderate Republicans who worked together to create a balanced budget. From 1980 to 1986 Senator Weicker served as the chair of the Senate Select Small Business Committee. During his time on the committee, Senator Weicker came up against efforts by the Reagan Administration to cut funding to small businesses. Moreover, Senator Weicker worked with other Congressmen to encourage moderate and responsible fiscal policies that worked to balance the budget rather than appease political party ideologies.</p>
@@ -114,7 +114,7 @@
 	    <p class="issues-quote">He loved transportation issues. He was a huge advocate of mass transit, rapid transit, not just for environmental reasons, but more for quality of life for his constituents. &mdash; <span class="issues-quote-attribution">Kim Elliott</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-transportation.jpg" class="full-width-img">
+        	<img src="images/issues-transportation.jpg" class="full-width-img" alt="a highway interchange">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">As a native to New England, Lowell P. Weicker, Jr., knew the importance of an efficient, effective, and affordable transportation system. During times of budget cuts and faltering faith in the public transportation system, Senator Weicker helped ensure that freight and passenger rail lines remained open to those in the Northeast. Transportation was a matter of mass transit, business, and energy conservation that remained vital to the Northeast and to Lowell Weicker.</p>
@@ -126,7 +126,7 @@
 	    <p class="issues-quote">They didn’t believe me. They believed Nixon. And you can’t blame them. I don’t blame them. Now, admittedly, as it was all over and drawing to its conclusion, I was the state hero, in some people’s minds, a national hero, but that wasn’t the case when it started off. So that was the two-edged sword. Anything where you take that much of a gamble, you’re either going to be a dead man or you’re going to be a hero. &mdash; <span class="issues-quote-attribution">Lowell P. Weicker, Jr.</span></p>
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/issues-watergate.jpg" class="full-width-img">
+        	<img src="images/issues-watergate.jpg" class="full-width-img" alt="the Watergate Building and a stack of newspapers">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
 		<p class="issues-subhead">Lowell Weicker is largely known today because of his involvement in the Watergate hearings, and he is particularly lauded for his second-front investigation, which ran ahead of the at times lax official Watergate Committee. On February 8, 1973, Senator Weicker was officially appointed to the Senate Select Committee on Presidential Campaign Activities. A junior Senator from Connecticut, Weicker soon earned a reputation for being outspoken in his refusal to allow higher-ups in the Nixon Administration to evade responsibility for the Watergate break-ins and the consequent Senate investigation into an administration cover-up.</p>
